--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,18 +2,10 @@
 
     <div id="header_wrap" class="outer">
         <header class="inner">
-	<a id="forkme_banner" href="{{repository_url}}">View on GitHub</a>
+	<a id="forkme_banner" href="{{site.repository_url}}">View on GitHub</a>
 
 	  <h1 id="project_title">{{site.title}}</h1>
-	  <h2 id="project_tagline">
-             Cooperative Concurrent Processes
-             <ul>
-                 <li>Language Supported</li>
-                 <li>Interrupt Driven</li>
-                 <li>Multi-Priority</li>
-                 <li>Monitors</li>
-             </ul>
-          </h2>
+	  <h2 id="project_tagline">{{site.sub-title}}</h2>
 
           <section id="downloads">
             <a class="zip_download_link" href="#">Download this project as a .zip file</a>
